Fixed footer and formatted rest

--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><Movie-Knight-Project-1></Movie-Knight-Project-1></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script defer src="Assets/js/index.js"></script>
+    <title>Movie-Knight-Project-1</title>
 </head>
+
 <body>
     <header>
-    <p>Header</p>
+        <p>Header</p>
     </header>
 
     <main>
 
-    <p>main</p>
+        <p>main</p>
     </main>
-    <p>Footer</p>
-    <footer></footer>
+    
+    <footer>
+        <p>Footer</p>
+    </footer>
 </body>
+
 </html>
