--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class = 'has-background-dark'>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+    <link rel="stylesheet" href="/Assets/css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script defer src="Assets/js/index.js"></script>
     <title>Movie-Knight-Project-1</title>
 </head>
 
 <body>
-    <header>
+    <header class = 'has-text-centered is-size-3 has-background-black-ter has-text-primary'>
         <p>Header</p>
     </header>
 
-    <main>
+    <main class = 'has-text-light'>
 
         <p>main</p>
     </main>
     
-    <footer>
+    <footer class = 'has-background-dark has-text-light'>
         <p>Footer</p>
     </footer>
 </body>
