Added code to style.css and minor edits to index

--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <link rel="stylesheet" href="/Assets/css/style.css">
+    <link rel="stylesheet" href="Assets/css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script defer src="Assets/js/index.js"></script>
     <title>Movie-Knight-Project-1</title>
 </head>
 
 <body>
-    <header class = 'has-text-centered is-size-3 has-background-black-ter has-text-primary'>
-        <p>Header</p>
+    <header class = "has-text-centered has-background-black-ter">
+        <div>
+            <p class = "is-size-3 has-text-primary">Movie-Knight</p>
+            <p class = "is-size-6 text-lightish">Find a movie to see tonight!</p>
+        </div>
     </header>
 
-    <main class = 'has-text-light'>
-
+    <main class = "text-lightish">
         <p>main</p>
     </main>
     
-    <footer class = 'has-background-dark has-text-light'>
+    <footer class = "has-background-dark text-lightish">
         <p>Footer</p>
     </footer>
 </body>
