--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <footer class = "has-background-dark text-lightish">
         <p>Footer</p>
     </footer>
+
+    <script
+  src="https://code.jquery.com/jquery-3.7.1.js"
+  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+  crossorigin="anonymous"></script>
 </body>
 
 </html>
