Adding a bit of css to movie cards.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <button class = "button is-primary">filter</button>
         </div>
 
-        <div class = "container has-background-black-ter ">
+        <div class = "container movies-cont has-background-black-ter my-6">
             <div class = "movie-cards">
-                <div class = "card">
+                <div class = "card has-background-dark text-lightish">
                     <header class = "card-header">
                         <p class = "card-header-title">This is a movie</p>
                     </header>
@@ -38,6 +38,7 @@
     <footer class = "has-background-black-ter text-lightish">
         <p>Footer</p>
     </footer>
+ 
 </body>
 
 </html>
