--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link rel="stylesheet" href="Assets/css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <script defer src="Assets/js/index.js"></script>
     <title>Movie-Knight-Project-1</title>
 </head>
 
@@ -23,14 +22,12 @@
         </div>
 
         <div class = "container movies-cont has-background-black-ter my-6">
-            <div class = "movie-cards">
+            <div class = "movie-cards columns is-multiline">
                 <div class = "card has-background-dark text-lightish">
                     <header class = "card-header">
                         <p class = "card-header-title">This is a movie</p>
                     </header>
-                </div>
-                
-                
+                </div>                               
             </div>
         </div>
     </main>
@@ -43,6 +40,7 @@
   src="https://code.jquery.com/jquery-3.7.1.js"
   integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
   crossorigin="anonymous"></script>
+  <script src="./Assets/js/index.js"></script>
 
 </body>
 
