Created second CSS style sheet and linked it to second html file.

--- a/index.html
+++ b/index.html
@@ -7,41 +7,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link rel="stylesheet" href="Assets/css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <title>Movie-Knight-Project-1</title>
+    <script defer src="Assets/js/index.js"></script>
+    <a href="second_page.html">Go to Second Page</a>
+    <title>Movie-Knight</title>
 </head>
 
 <body>
     <header class = "has-text-centered has-background-black-ter">
-         <p class = "is-size-3 has-text-primary">Movie-Knight</p>
-         <p class = "is-size-6 text-lightish">Find a movie to see tonight!</p>
+        <div>
+            <p class = "is-size-3 has-text-primary">Movie-Knight</p>
+            <p class = "is-size-6 text-lightish">Find a movie to see tonight!</p>
+        </div>
     </header>
 
     <main class = "text-lightish">
-        <div class = "buttons">
-            <button class = "button is-primary">filter</button>
-        </div>
-
-        <div class = "container movies-cont has-background-black-ter my-6">
-            <div class = "movie-cards columns is-multiline">
-                <div class = "card has-background-dark text-lightish">
-                    <header class = "card-header">
-                        <p class = "card-header-title">This is a movie</p>
-                    </header>
-                </div>                               
-            </div>
-        </div>
+        <p>main</p>
     </main>
     
-    <footer class = "has-background-black-ter text-lightish">
+    <footer class = "has-background-dark text-lightish">
         <p>Footer</p>
     </footer>
-
-    <script
-  src="https://code.jquery.com/jquery-3.7.1.js"
-  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-  crossorigin="anonymous"></script>
-  <script src="./Assets/js/index.js"></script>
-
 </body>
 
 </html>
