--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class = 'has-background-dark'>
+<html lang="en" class='has-background-dark'>
 
 <head>
     <meta charset="UTF-8">
@@ -11,36 +11,43 @@
 </head>
 
 <body>
-    <header class = "has-text-centered has-background-black-ter">
-         <p class = "is-size-3 has-text-primary">Movie-Knight</p>
-         <p class = "is-size-6 text-lightish">Find a movie to see tonight!</p>
+    <header class="has-text-centered has-background-black-ter">
+        <p class="is-size-3 has-text-primary">Movie-Knight</p>
+        <p class="is-size-6 text-lightish">Find a movie to see tonight!</p>
     </header>
 
-    <main class = "text-lightish">
-        <div class = "buttons">
-            <button class = "button is-primary">filter</button>
-        </div>
+    <main class="text-lightish block">
+        <!-- <div class = "buttons">
+            <button class = "button is-primary filter">filter</button>
+        </div> -->
 
-        <div class = "container movies-cont has-background-black-ter my-6">
-            <div class = "movie-cards columns is-multiline">
-                <div class = "card has-background-dark text-lightish">
-                    <header class = "card-header">
-                        <p class = "card-header-title">This is a movie</p>
+        <div class="container movies-cont my-6">
+            <div class = "level">
+                <div class="select is-primary is-rounded filter">
+                    <select>
+                        <option>90% +</option>
+                        <option>80%-90%</option>
+                        <option>70%-80%</option>
+                    </select>
+                </div>
+            </div>
+            <div class="movie-cards columns is-multiline has-background-black-ter">
+                <div class="card has-background-dark text-lightish mgb-small">
+                    <header class="card-header">
+                        <p class="card-header-title"></p>
                     </header>
-                </div>                               
+                </div>
             </div>
         </div>
     </main>
-    
-    <footer class = "has-background-black-ter text-lightish">
+
+    <footer class="has-background-black-ter text-lightish mgt-small">
         <p>Footer</p>
     </footer>
 
-    <script
-  src="https://code.jquery.com/jquery-3.7.1.js"
-  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-  crossorigin="anonymous"></script>
-  <script src="./Assets/js/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="./Assets/js/index.js"></script>
 
 </body>
 
