Added baasic html code to try and match wireframing for second page.

--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -21,6 +21,21 @@
     </header>
 
     <main class = "text-lightish">
+        <section class="body-content">
+            <div class="movie-details">
+              <img src="path/to/movie-image.jpg" alt="Movie Image">
+              <div class="movie-description">
+                <h2>Movie Title</h2>
+                <p>Movie description goes here.</p>
+              </div>
+            </div>
+            <div class="zip-code">
+              <label for="zip-code">Enter your zip code:</label>
+              <input type="text" id="zip-code" placeholder="Enter zip code">
+            </div>
+            <div class="theater-map">
+            </div>
+          </section>
         <p></p>
     </main>
     
