Edited classes in the second html

--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <link rel="stylesheet" href="Assets/css/style2.css">
+    <link rel="stylesheet" href="css/styles2.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <script defer src="Assets/js/index.js"></script>
+    <script defer src="js/index.js"></script>
     <a href="second_page.html"></a>
     <title>Movie-Knight</title>
 </head>
@@ -20,7 +20,7 @@
         </div>
     </header>
 
-    <main class = "text-lightish">
+    <main class = "text-lightish has-background-danger container">
         <section class="body-content">
             <div class="movie-details">
               <img src="path/to/movie-image.jpg" alt="Movie Image">
