Edited css and added some bulma to 2nd page.

--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -18,9 +18,9 @@
         </div>
     </header>
 
-    <main class = "text-lightish has-background-danger container">
+    <main class = "text-lightish has-background-black-ter mgt-small container">
         <section class="body-content">
-            <div class="movie-details">
+            <div class="movie-details level">
               <img src="" alt="Movie Image">
               <div class="movie-description">
                 <h2>Movie Title</h2>
