--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -20,12 +20,16 @@
 
     <main class = "text-lightish has-background-danger container">
         <section class="body-content">
+          
             <div class="movie-details">
+        <!--Everything inside the move-details div is repopulated in second-page.js-->
+        <!--any class changes or addins with burla/custom need to be made in the "genDetails" function-->
               <img src="" alt="Movie Image">
               <div class="movie-description">
                 <h2>Movie Title</h2>
                 <p>Movie description goes here.</p>
               </div>
+        <!--End of Javascript repopulation-->
             </div>
             <div class="zip-code">
               <label for="zip-code">Enter your zip code:</label>
