--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -50,7 +50,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="./js/second-page.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYfYSjUZu51mSR2k_mShQ61eObLzdWbOQ&libraries=places&type=movie_theater&callback=initAutocomplete" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYfYSjUZu51mSR2k_mShQ61eObLzdWbOQ&libraries=places&callback=initialize" async defer></script>
 </body>
 
 </html>
