added home event

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div class = "level">
                 <div class="select is-primary is-rounded filter">
                     <select>
-                        <option>90% +</option>
-                        <option>80%-90%</option>
-                        <option>70%-80%</option>
+                        <option>Popularity</option>
+                        <option>Release Date</option>
+                        <option>Average Viewer Rating</option>
                     </select>
                 </div>
             </div>
