--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div class = "level">
                 <div class="select is-primary is-rounded filter">
                     <select>
-                        <option>Popularity</option>
-                        <option>Release Date</option>
-                        <option>Average Viewer Rating</option>
+                        <option value="popularity">Popularity</option>
+                        <option value="releaseDate">Release Date</option>
+                        <option value-="rating">Average Viewer Rating</option>
                     </select>
                 </div>
                 <div>
