Adjusted search bar one 2nd page and tweaked style

--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -31,12 +31,9 @@
         <!--End of Javascript repopulation-->
             </div>
             <div>
-              <input
-              id="pac-input"
-              class="controls"
-              type="text"
-              placeholder="Search Box"
-              />
+              <input class="input is-rounded is-primary searchBox" 
+              type="text" 
+              placeholder="Search Box">
               <div id="map"></div>
             </div>
           </section>
