--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </select>
                 </div>
                 <div>
-                    <input class="input is-rounded" type="text" placeholder="Search for a movie">
+                    <input class="input is-rounded is-primary" type="text" placeholder="Search for a movie">
                 </div>
             </div>
             <div class="movie-cards columns is-multiline has-background-black-ter">
