--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container movies-cont my-6">
             <div class = "level">
                 <div class="select is-primary is-rounded filter">
-                    <select>
+                    <select class = "sort">
                         <option value="popularity">Popularity</option>
                         <option value="releaseDate">Release Date</option>
                         <option value-="rating">Average Viewer Rating</option>
