Fixed the average viewer rating filter.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <select class = "sort">
                         <option value="popularity">Popularity</option>
                         <option value="releaseDate">Release Date</option>
-                        <option value-="rating">Average Viewer Rating</option>
+                        <option value-="viewerRating">Average Viewer Rating</option>
                     </select>
                 </div>
                 <div>
