--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -31,10 +31,12 @@
         <!--End of Javascript repopulation-->
             </div>
             <div>
-              <input class="input is-rounded is-primary searchBox" 
-              type="text" 
+              <input
+              id="pac-input"
+              class="controls"
+              type="text"
               placeholder="Search Box">
-              <div id="map"></div>
+              <div id="map"> 
             </div>
           </section>
         <p></p>
@@ -46,8 +48,8 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="./js/second-page.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYfYSjUZu51mSR2k_mShQ61eObLzdWbOQ&libraries=places&callback=initialize" async defer></script>
+    <script src="./js/second-page.js"></script>
 </body>
 
 </html>
