added history cards

--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -39,7 +39,9 @@
               <div id="map"> 
             </div>
           </section>
-        <p></p>
+        <section>
+            <div class="history columns is-multiline"></div>
+        </section>
     </main>
 
     
