finished map functionality

--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -41,6 +41,8 @@
           </section>
         <section>
             <div class="history columns is-multiline"></div>
+             <!--Everything inside the history div is repopulated in second-page.js-->
+        <!--any class changes or addins with burla/custom need to be made in the "genDetails" function-->
         </section>
     </main>
 
