--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 <div>
                     <input class="input is-rounded is-primary" type="text" placeholder="Search for a movie">
                 </div>
+                <div class="search-history">
+                </div>
             </div>
             <!-- This is the modal. -->
             <div class="modal">
