--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                         <option value-="viewerRating">Average Viewer Rating</option>
                     </select>
                 </div>
-                <div>
+                <div class ="select is-primary is-rounded filter">
                     <input class="input is-rounded is-primary" type="text" placeholder="Search for a movie">
+                    <button id="notAButton">submit</button>
                 </div>
                 <div class="search-history">
                 </div>
