added modal functionality

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
                         <option value="releaseDate">Release Date</option>
                         <option value-="viewerRating">Average Viewer Rating</option>
                     </select>
-                </div>
-                <div class ="select is-primary is-rounded filter">
+                </div> 
+                <form class="Form">               
                     <input class="input is-rounded is-primary" type="text" placeholder="Search for a movie">
-                    <button id="notAButton">submit</button>
-                </div>
+                    <input type="submit" style="display: none" /> 
+                </form> 
+                                      
                 <div class="search-history">
                 </div>
             </div>
