Styled autofill and search history

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
                     </select>
                 </div> 
                 <form class="Form">               
-                    <input class="input is-rounded is-primary" type="text" placeholder="Search for a movie">
+                    <input class="input is-rounded is-primary search-box" type="text" placeholder="Search for a movie">
                     <input type="submit" style="display: none" /> 
+                    <div class="search-history has-background-white has-text-black">
+                    </div>
                 </form> 
                                       
-                <div class="search-history">
-                </div>
+                
             </div>
             <!-- This is the modal. -->
             <div class="modal">
