--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -40,7 +40,7 @@
             </div>
           </section>
         <section>
-            <div class="history columns is-multiline"></div>
+            <div class="history columns is-multiline container"></div>
              <!--Everything inside the history div is repopulated in second-page.js-->
         <!--any class changes or addins with burla/custom need to be made in the "genDetails" function-->
         </section>
