--- a/Assets/second_page.html
+++ b/Assets/second_page.html
@@ -30,7 +30,12 @@
               </div>
         <!--End of Javascript repopulation-->
             </div>
-            <div>
+            <div class="historyBox">
+                <div class="history columns is-multiline container"></div>
+                 <!--Everything inside the history div is repopulated in second-page.js-->
+            <!--any class changes or addins with burla/custom need to be made in the "genDetails" function-->
+            </div>
+            <div class="mapBox">
               <input
               id="pac-input"
               class="controls"
@@ -39,11 +44,6 @@
               <div id="map"> 
             </div>
           </section>
-        <section>
-            <div class="history columns is-multiline container"></div>
-             <!--Everything inside the history div is repopulated in second-page.js-->
-        <!--any class changes or addins with burla/custom need to be made in the "genDetails" function-->
-        </section>
     </main>
 
     
