--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 <div class="modal-background"></div>
                 <div class="modal-content">
                     <div class="box">
-                        <p>No Results.</p>
+                        <h3>No Results.</h3>
+                        <p>Either the movie doesn't exist or is not currently in theaters</p>
                     </div>
                 </div>
                 <button class="modal-close is-large" aria-label="close"></button>
@@ -63,10 +64,6 @@
             </div>
         </div>
     </main>
-
-    <footer class="has-background-black-ter text-lightish mgt-small">
-        <p>Footer</p>
-    </footer>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
